--- a/room-booking-system/web/src/css/components/_rooms-list.styl
+++ b/room-booking-system/web/src/css/components/_rooms-list.styl
@@ -85,7 +85,7 @@
   .table__row--subheader th
     height 4rem
 
-.table__cell--business-unit-1
+.table__cell--固定電影聚會
   background businessUnit1
   padding 3rem 0
   cursor pointer
@@ -104,7 +104,7 @@
     padding 3rem 0
     width 50%
 
-.table__cell--business-unit-2
+.table__cell--固定桌遊活動
   background businessUnit2
   padding 3rem 0
   cursor pointer
@@ -123,7 +123,7 @@
     padding 3rem 0
     width 50%
 
-.table__cell--business-unit-3
+.table__cell--互惠合作預定
   background businessUnit3
   padding 3rem 0
   cursor pointer
@@ -142,7 +142,7 @@
     padding 3rem 0
     width 50%
 
-.table__cell--business-unit-4
+.table__cell--經常性遊客預定
   background businessUnit4
   border-top 1rem solid businessUnit4
   cursor pointer
@@ -161,7 +161,7 @@
     padding 3rem 0
     width 50%
 
-.table__cell--business-unit-5
+.table__cell--新進遊客預定
   background businessUnit5
   border-top 1rem solid businessUnit5
   cursor pointer
