--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -492,12 +492,12 @@ td.rdtYear:hover {
 .table .table__row--subheader th {
   height: 4rem;
 }
-.table__cell--business-unit-1 {
+.table__cell--固定電影聚會 {
   background: #70d6ff;
   padding: 3rem 0;
   cursor: pointer;
 }
-.table__cell--business-unit-1.table__cell--first-half-hour {
+.table__cell--固定電影聚會.table__cell--first-half-hour {
   background: #70d6ff;
   cursor: pointer;
   display: block;
@@ -505,7 +505,7 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-1.table__cell--second-half-hour {
+.table__cell--固定電影聚會.table__cell--second-half-hour {
   background: #70d6ff;
   cursor: pointer;
   display: block;
@@ -513,12 +513,12 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-2 {
+.table__cell--固定桌遊活動 {
   background: #ffd670;
   padding: 3rem 0;
   cursor: pointer;
 }
-.table__cell--business-unit-2.table__cell--first-half-hour {
+.table__cell--固定桌遊活動.table__cell--first-half-hour {
   background: #ffd670;
   cursor: pointer;
   display: block;
@@ -526,7 +526,7 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-2.table__cell--second-half-hour {
+.table__cell--固定桌遊活動.table__cell--second-half-hour {
   background: #ffd670;
   cursor: pointer;
   display: block;
@@ -534,12 +534,12 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-3 {
+.table__cell--互惠合作預定 {
   background: #ef709d;
   padding: 3rem 0;
   cursor: pointer;
 }
-.table__cell--business-unit-3.table__cell--first-half-hour {
+.table__cell--互惠合作預定.table__cell--first-half-hour {
   background: #ef709d;
   cursor: pointer;
   display: block;
@@ -547,7 +547,7 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-3.table__cell--second-half-hour {
+.table__cell--互惠合作預定.table__cell--second-half-hour {
   background: #ef709d;
   cursor: pointer;
   display: block;
@@ -555,12 +555,12 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-4 {
+.table__cell--經常性遊客預定 {
   background: #dabfff;
   border-top: 1rem solid #dabfff;
   cursor: pointer;
 }
-.table__cell--business-unit-4.table__cell--first-half-hour {
+.table__cell--經常性遊客預定.table__cell--first-half-hour {
   background: #dabfff;
   cursor: pointer;
   display: block;
@@ -568,7 +568,7 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-4.table__cell--second-half-hour {
+.table__cell--經常性遊客預定.table__cell--second-half-hour {
   background: #dabfff;
   cursor: pointer;
   display: block;
@@ -576,12 +576,12 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-5 {
+.table__cell--新進遊客預定 {
   background: #85ffc7;
   border-top: 1rem solid #85ffc7;
   cursor: pointer;
 }
-.table__cell--business-unit-5.table__cell--first-half-hour {
+.table__cell--新進遊客預定.table__cell--first-half-hour {
   background: #85ffc7;
   cursor: pointer;
   display: block;
@@ -589,7 +589,7 @@ td.rdtYear:hover {
   padding: 3rem 0;
   width: 50%;
 }
-.table__cell--business-unit-5.table__cell--second-half-hour {
+.table__cell--新進遊客預定.table__cell--second-half-hour {
   background: #85ffc7;
   cursor: pointer;
   display: block;
