--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -487,7 +487,7 @@ td.rdtYear:hover {
   height: 3rem;
 }
 .table .table__row th {
-  height: 6rem;
+  height: auto;
 }
 .table .table__row--subheader th {
   height: 4rem;
