--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -135,7 +135,7 @@ input[type=radio] {
   border: 0.1rem solid #ed1c24;
   color: #fafafa;
   cursor: pointer;
-  font-family: "raleway", sans-serif;
+  font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.6rem;
   font-weight: 600;
   margin-right: 2rem;
@@ -195,7 +195,7 @@ input[type=radio] {
   cursor: pointer;
 }
 .rdtSwitch {
-  font-family: "proxima-nova", sans-serif;
+  font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 2rem;
   font-weight: 700;
 }
@@ -261,7 +261,7 @@ span.rdtOld {
   color: #cecece;
 }
 th.dow {
-  font-family: "proxima-nova", sans-serif;
+  font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-weight: 600;
   width: 2rem;
 }
@@ -387,7 +387,7 @@ td.rdtYear:hover {
   word-break: break-all;
 }
 .nav {
-  font-family: "proxima-nova", sans-serif;
+   font-family: DFKai-SB,"Times New Roman", Times, serif;
   margin: 0 2rem;
 }
 .nav__list {
@@ -461,7 +461,7 @@ td.rdtYear:hover {
 }
 .table__data--asset {
   width:100%;
-  font-family: "proxima-nova", sans-serif;
+   font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 1;
@@ -602,7 +602,7 @@ html {
 }
 body {
   background: #fefefe;
-  font-family: "proxima-nova", sans-serif;
+   font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.6rem;
   padding: 0;
   margin: 0 auto;
@@ -696,7 +696,7 @@ li {
   grid-row: 1;
 }
 .header__heading {
-  font-family: "raleway", sans-serif;
+  font-family: DFKai-SB,"Times New Roman", Times, serif;
 }
 .header__heading--main {
   color: #f4f4f4;
@@ -839,7 +839,7 @@ li {
           box-sizing: border-box;
   color: #1c1c1c;
   display: block;
-  font-family: "raleway", sans-serif;
+  font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.4rem;
   height: 3.8rem;
   margin-top: 0.4rem;
@@ -849,7 +849,7 @@ li {
 .form__input--textarea {
   border: 0.1rem solid #a5a5a5;
   display: block;
-  font-family: "raleway", sans-serif;
+  font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.8rem;
   height: 6rem;
   margin-top: 0.4rem;
@@ -1102,10 +1102,9 @@ section.container a.button:hover {
 }
 
 #header-title{
-    font-family: 'Arvo';
+    font-family: DFKai-SB,"Times New Roman", Times, serif;
     font-weight: 700;
     color: #ed786a;
-    text-shadow: 0.05em 0.075em 0 rgba(0, 0, 0, 0.1);
     font-size: 3em;
     letter-spacing: 10px;
     text-align: center;
