--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -977,19 +977,15 @@ div.one_page .w50 {
     vertical-align:top;
 }
 .w100{
-    display: flex;
     width: 100% !important;
 }
 .w50{
-    display: flex;
     width: 50% !important;
 }
 .w33{
-    display: flex;
     width: 33% !important;
 }
 .w25{
-    display: flex;
     width: 25% !important;
 }
 .bkc-black{
@@ -1047,12 +1043,22 @@ section.container p,h1,h2,h3,h4,h5,h6,a {
    margin-bottom: 15px;
 }
 
-section.container img, p {
+section.container img{
     display: block;
-    width: 90%;
-    height: 83%;
-    padding-right:2%;
-    padding-left:2%;
+    height: 400px;
+    width:95%;
+}
+.image_box{
+    padding:20px;
+    width:100%;
+    overflow:hidden;
+
+
+}
+section.container p {
+    display: block;
+    width: 100%;
+    overflow:hidden;
 }
 section.container div.row {
     display: flex;
