--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -135,7 +135,7 @@ input[type=radio] {
   border: 0.1rem solid #ed1c24;
   color: #fafafa;
   cursor: pointer;
-  font-family: DFKai-SB,"Times New Roman", Times, serif;
+  // font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.6rem;
   font-weight: 600;
   margin-right: 2rem;
@@ -195,7 +195,7 @@ input[type=radio] {
   cursor: pointer;
 }
 .rdtSwitch {
-  font-family: DFKai-SB,"Times New Roman", Times, serif;
+  // font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 2rem;
   font-weight: 700;
 }
@@ -261,7 +261,7 @@ span.rdtOld {
   color: #cecece;
 }
 th.dow {
-  font-family: DFKai-SB,"Times New Roman", Times, serif;
+  // font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-weight: 600;
   width: 2rem;
 }
@@ -387,7 +387,7 @@ td.rdtYear:hover {
   word-break: break-all;
 }
 .nav {
-   font-family: DFKai-SB,"Times New Roman", Times, serif;
+   // font-family: DFKai-SB,"Times New Roman", Times, serif;
   margin: 0 2rem;
 }
 .nav__list {
@@ -461,7 +461,7 @@ td.rdtYear:hover {
 }
 .table__data--asset {
   width:100%;
-   font-family: DFKai-SB,"Times New Roman", Times, serif;
+   // font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.4rem;
   font-weight: 400;
   line-height: 1;
@@ -602,7 +602,7 @@ html {
 }
 body {
   background: #fefefe;
-   font-family: DFKai-SB,"Times New Roman", Times, serif;
+   // font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.6rem;
   padding: 0;
   margin: 0 auto;
@@ -696,7 +696,7 @@ li {
   grid-row: 1;
 }
 .header__heading {
-  font-family: DFKai-SB,"Times New Roman", Times, serif;
+  // font-family: DFKai-SB,"Times New Roman", Times, serif;
 }
 .header__heading--main {
   color: #f4f4f4;
@@ -839,7 +839,7 @@ li {
           box-sizing: border-box;
   color: #1c1c1c;
   display: block;
-  font-family: DFKai-SB,"Times New Roman", Times, serif;
+  // font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.4rem;
   height: 3.8rem;
   margin-top: 0.4rem;
@@ -849,7 +849,7 @@ li {
 .form__input--textarea {
   border: 0.1rem solid #a5a5a5;
   display: block;
-  font-family: DFKai-SB,"Times New Roman", Times, serif;
+  // font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.8rem;
   height: 6rem;
   margin-top: 0.4rem;
@@ -998,7 +998,7 @@ div.one_page .w50 {
 }
 .bkc-gray{
     color:#555555;
-    background-color:#aaaaaa;
+    background-color:#dfdfdf;
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -1106,9 +1106,11 @@ section.container a.button:hover {
 .p20 {
     padding:20px;
 }
-
+p, h1, h2, h3, h4, h5, h6, span, div{
+    //font-family: DFKai-SB,"Times New Roman", Times, serif;
+    font-family: "Microsoft JhengHei","STHeiti", Papyrus, Verdana, ;
+}
 #header-title{
-    font-family: DFKai-SB,"Times New Roman", Times, serif;
     font-weight: 700;
     color: #ed786a;
     font-size: 3em;
