css(page): the text  formatting is off on  mobile

--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -961,6 +961,16 @@ input[type=radio] {
 .eventDetailContent{
   padding: 0px 8% 0px 8%;
 }
+.eventDetailContent p{
+  text-align: left;
+  display: block;
+
+}
+.eventDetailContent span{
+  text-align: left;
+  display: inline;
+
+}
 .one_page li{
     width:100%;
 }
