--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1,11 +1,15 @@
 @import url("https://use.typekit.net/jkj6uwy.css");
+p, a, span, h1,h2,h3,h4,h5,h6,div,th,td{
+    color:#420000;
+}
+
 .table--booking {
   background: #fafafa;
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
   border-collapse: collapse !important;
   border-spacing: 0 0 !important;
-  -webkit-box-shadow: 0px 2px 5px 0px #cecece;
-  box-shadow: 0px 2px 5px 0px #cecece;
+  -webkit-box-shadow: 0px 2px 5px 0px #d4d7dd;
+  box-shadow: 0px 2px 5px 0px #d4d7dd;
   margin: 0 auto;
   padding: 0;
   width: 34rem;
@@ -14,7 +18,7 @@
   text-align: center;
 }
 .table--booking th {
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
 }
 .table--booking--split {
   background: #fafafa;
@@ -28,7 +32,7 @@
   text-align: center;
 }
 .table--booking--split th {
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
 }
 .table--booking--split .table__cell {
   border-top-width: 0;
@@ -37,18 +41,18 @@
   border-left-width: 0;
 }
 .table--booking--split .table__cell span:first-child {
-  border-right: 0.1rem solid #cecece;
+  border-right: 0.1rem solid #d4d7dd;
 }
 .table--booking--split .table__cell span:last-child {
-  border-left: 0.1rem solid #cecece;
+  border-left: 0.1rem solid #d4d7dd;
 }
 .table__row--full {
   height: 6rem;
   padding: 2rem 0;
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
 }
 .table__row--full td {
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
 }
 .table--nested {
   border-collapse: collapse !important;
@@ -67,10 +71,10 @@
   border-top-width: 0;
 }
 .table__row--border-top {
-  border-top: 0.1rem solid #cecece;
+  border-top: 0.1rem solid #d4d7dd;
 }
 .table__row--border-bottom {
-  border-bottom: 0.1rem solid #cecece;
+  border-bottom: 0.1rem solid #d4d7dd;
 }
 .table__row--no-border td {
   border: none;
@@ -101,8 +105,8 @@
 }
 .content__form {
   background: #fafafa;
-  -webkit-box-shadow: 0px 2px 5px 0px #cecece;
-  box-shadow: 0px 2px 5px 0px #cecece;
+  -webkit-box-shadow: 0px 2px 5px 0px #d4d7dd;
+  box-shadow: 0px 2px 5px 0px #d4d7dd;
   grid-column: 3;
   grid-row: 1;
   min-width: 20rem;
@@ -131,8 +135,8 @@ input[type=radio] {
   width: 12rem;
 }
 .button {
-  background: #ed1c24;
-  border: 0.1rem solid #ed1c24;
+  background: #420000;
+  border: 0.1rem solid #420000;
   color: #fafafa;
   cursor: pointer;
   // font-family: DFKai-SB,"Times New Roman", Times, serif;
@@ -144,9 +148,9 @@ input[type=radio] {
   text-transform: uppercase;
 }
 .button:hover {
-  background: #fafafa;
-  border: 0.1rem solid #ed1c24;
-  color: #ed1c24;
+  background: #420000;
+  border: 0.1rem solid #420000;
+  color: #fafafa;
 }
 .button--alternative {
   background: #fafafa;
@@ -167,8 +171,8 @@ input[type=radio] {
 }
 .rdt {
   background: #fafafa;
-  -webkit-box-shadow: 0px 2px 5px 0px #cecece;
-  box-shadow: 0px 2px 5px 0px #cecece;
+  -webkit-box-shadow: 0px 2px 5px 0px #d4d7dd;
+  box-shadow: 0px 2px 5px 0px #d4d7dd;
   font-size: 1.6rem;
   width: 30rem;
 }
@@ -247,18 +251,18 @@ th.rdtDisabled,
 td.rdtDisabled,
 span.rdtDisabled {
   background: none;
-  color: #cecece;
+  color: #d4d7dd;
   cursor: not-allowed;
 }
 th.rdtDisabled:hover,
 td.rdtDisabled:hover,
 span.rdtDisabled:hover {
   background: none;
-  color: #cecece;
+  color: #d4d7dd;
   cursor: not-allowed;
 }
 span.rdtOld {
-  color: #cecece;
+  color: #d4d7dd;
 }
 th.dow {
   // font-family: DFKai-SB,"Times New Roman", Times, serif;
@@ -328,7 +332,7 @@ td.rdtYear:hover {
   padding-left: 2rem;
 }
 .key__square {
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
   display: inline-block;
   width: 1em;
   height: 1em;
@@ -406,12 +410,12 @@ td.rdtYear:hover {
 }
 .table {
   background: #fafafa;
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
   border-collapse: collapse !important;
   border-spacing: 0 0 !important;
   color: #1c1c1c;
-  -webkit-box-shadow: 0px 2px 5px 0px #cecece;
-  box-shadow: 0px 2px 5px 0px #cecece;
+  -webkit-box-shadow: 0px 2px 5px 0px #d4d7dd;
+  box-shadow: 0px 2px 5px 0px #d4d7dd;
   margin: 1rem;
   padding: 0;
   width: 100%;
@@ -433,24 +437,24 @@ td.rdtYear:hover {
 }
 .table__row:hover {
   background: #f4f4f4;
-  border: 0.1rem solid #cecece;
-  -webkit-box-shadow: 2px 2px 5px 0px #cecece;
-  box-shadow: 2px 2px 5px 0px #cecece;
+  border: 0.1rem solid #d4d7dd;
+  -webkit-box-shadow: 2px 2px 5px 0px #d4d7dd;
+  box-shadow: 2px 2px 5px 0px #d4d7dd;
 }
 .table__row td {
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
 }
 .table__row th {
-  border: 1px solid #cecece;
+  border: 1px solid #d4d7dd;
   padding: 1rem;
 }
 .table__row--header {
-  background: #cecece;
+  background: #d4d7dd;
   margin: 0 auto;
   padding: 0;
 }
 .table__row--header:hover {
-  background: #cecece;
+  background: #d4d7dd;
 }
 .table__row--subheader {
   background: #f4f4f4;
@@ -601,7 +605,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  background: #fefefe;
+  background: #f6f6f6;
    // font-family: DFKai-SB,"Times New Roman", Times, serif;
   font-size: 1.6rem;
   padding: 0;
@@ -633,8 +637,8 @@ li {
 }
 .wrapper__form {
   background: #fafafa;
-  -webkit-box-shadow: 0px 2px 5px 0px #cecece;
-  box-shadow: 0px 2px 5px 0px #cecece;
+  -webkit-box-shadow: 0px 2px 5px 0px #d4d7dd;
+  box-shadow: 0px 2px 5px 0px #d4d7dd;
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: 1fr;
@@ -662,8 +666,8 @@ li {
 }
 .wrapper__bookings {
   background: #fafafa;
-  -webkit-box-shadow: 1px 1px 5px 0px #cecece;
-  box-shadow: 1px 1px 5px 0px #cecece;
+  -webkit-box-shadow: 1px 1px 5px 0px #d4d7dd;
+  box-shadow: 1px 1px 5px 0px #d4d7dd;
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: auto 1fr;
@@ -672,9 +676,9 @@ li {
   grid-row: 2;
 }
 .header {
-  background: #1c1c1c;
-  -webkit-box-shadow: 0px 2px 5px 0px #cecece;
-  box-shadow: 0px 2px 5px 0px #cecece;
+  background: #420000;
+  -webkit-box-shadow: 0px 2px 5px 0px #d4d7dd;
+  box-shadow: 0px 2px 5px 0px #d4d7dd;
   grid-area: header;
   grid-column: 1/-1;
   grid-row: 1;
@@ -739,8 +743,8 @@ li {
 }
 .sidebar__box {
   background: #fafafa;
-  -webkit-box-shadow: 1px 1px 5px 0px #cecece;
-  box-shadow: 1px 1px 5px 0px #cecece;
+  -webkit-box-shadow: 1px 1px 5px 0px #d4d7dd;
+  box-shadow: 1px 1px 5px 0px #d4d7dd;
   margin: 3rem auto;
   width: 30rem;
 }
@@ -917,7 +921,7 @@ input[type=radio] {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border: 0.1rem solid #cecece;
+  border: 0.1rem solid #d4d7dd;
   margin: 5rem;
   width: 100%;
 }
@@ -1008,8 +1012,8 @@ div.one_page .w50 {
     background-color:#52575c;
 }
 .bkc-gray{
-    color:#555555;
-    background-color:#dfdfdf;
+    color:#420000;
+    background-color:#eae9e9;
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -1038,7 +1042,7 @@ section.container header.major-lf{
     display: block;
 }
 
-section.container header p,h1,h2,h3,h4,h5,h6{
+section.container header p{
     text-align: left;
     margin-bottom: 1.5px;
     display: block;
@@ -1047,7 +1051,22 @@ section.container header p,h1,h2,h3,h4,h5,h6{
     margin-block-end: 0px;
 }
 
+section.container a{
+  color: #420000;
+  padding: 0; 
+  text-decoration: revert;
 
+}
+
+.eventDetailContent a{
+  color: #d4d7dd ;
+
+}
+
+.eventDetailContent a:hover{
+  color: #420000;
+  
+}
 
 
 section.container p,h1,h2,h3,h4,h5,h6,a {
@@ -1081,7 +1100,6 @@ section.container div.row {
 section.container a.button {
        transition: color 0.25s ease-in-out, border-color 0.25s ease-in-out, background-color 0.25s ease-in-out;
        display: inline-block;
-       color: inherit;
        background: none;
        text-decoration: none;
        border: solid 1px #c2c7cc;
@@ -1096,8 +1114,8 @@ section.container a.button {
 }
 
 section.container a.button:hover {
-
-       background: #ed786a;
+       color: #d4d7dd;
+       background: #420000;
 }
 .center {
     text-align: center;
@@ -1140,6 +1158,10 @@ hr {
    background-color:#FFF;
    border: 4px double gray;
    overflow:scroll;
+}
+
+div.rbc-event {
+  background-color: #d4d7dd !important;
 }
 
 @media screen and (max-width: 1024px) {
@@ -1212,8 +1234,8 @@ hr {
         min-width: 5px;
         min-height: 50px;
     }
+
     div.rbc-event, div.rbc-event span{
-        background:#3174ad;
         position:relative;
         animation:TestMove3 1.5s infinite alternate ease-out; /*IE*/
         -moz-animation:TestMove3 1.5s infinite alternate ease-out; /*FireFox*/
