--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1083,7 +1083,7 @@ section.container p,h1,h2,h3,h4,h5,h6,a {
 
 section.container img{
     display: block;
-    height: 400px;
+    max-height: 400px;
     width:95%;
 }
 .image_box{
