css(page): fix img format off

--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1084,6 +1084,7 @@ section.container p,h1,h2,h3,h4,h5,h6,a {
 section.container img{
     display: block;
     width:95%;
+    height: auto;
 }
 .image_box{
     padding:20px;
