--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1083,8 +1083,8 @@ section.container p,h1,h2,h3,h4,h5,h6,a {
 
 section.container img{
     display: block;
-    width:95%;
-    height: auto;
+    width:95% !important;
+    height: auto !important;
 }
 .image_box{
     padding:20px;
