refactor(文字編輯器):文字預設置左

--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1079,7 +1079,9 @@ section.container a{
   
 }
 
-
+.textLeft {
+  text-align: left;
+}
 section.container p,h1,h2,h3,h4,h5,h6,a {
    margin-bottom: 15px;
 }
