--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1038,7 +1038,7 @@ section.container{
     padding-top: 30px;
     max-width: 100%;
     padding-bottom:70px;
-    /* padding-left:2%; */
+    padding:2%;
     min-height:200px;
 }
 section.container header.major{
