--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1209,6 +1209,9 @@ hr {
 
 }
 @media screen and (max-width: 1024px) {
+    #keyword {
+      width:85%;
+    }
     .textLeft {
       text-align: left;
     }
