--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1209,6 +1209,12 @@ hr {
 
 }
 @media screen and (max-width: 1024px) {
+
+    section.container img{
+      display: block;
+      width: 450px ;
+      height: auto ;
+    }
     #keyword {
       width:85%;
     }
