--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1211,9 +1211,9 @@ hr {
 @media screen and (max-width: 1024px) {
 
     section.container img{
-      display: block;
-      width: 450px ;
-      height: auto ;
+      margin: auto;
+      width: 95% !important;
+      height: auto !important;
     }
     #keyword {
       width:85%;
@@ -1297,6 +1297,16 @@ hr {
         justify-content:center;
 
         padding-bottom:20px;
+    }
+    .w100{
+      width: 100% !important;
+      text-align: center;
+      margin:0 auto;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+
+      padding-bottom:20px;
     }
 
     div.rbc-event-content p, div.rbc-event-content strong, div.rbc-event-label {
