--- a/room-booking-system/web/src/css/style.css
+++ b/room-booking-system/web/src/css/style.css
@@ -1001,7 +1001,12 @@ div.one_page .w50 {
 .w100{
     width: 100% !important;
 }
-
+.w20{
+  width: 20% !important;
+}
+.w10{
+  width: 10% !important;
+}
 .w75{
     width: 75% !important;
 }
@@ -1201,6 +1206,9 @@ hr {
   overflow: hidden;
   width:600px; */
 }
+.hidden_desktop{
+  display: none !important;
+}
 
 @media screen and (min-width: 1025px) {
   div.rbc-event {
@@ -1209,8 +1217,17 @@ hr {
 
 }
 @media screen and (max-width: 1024px) {
+    .hidden_desktop{
+      display: inline !important;
+    }
+    .btn-lr{
+      float: none;
+    }
+    .hidden_mobile{
+      display: none !important;
+    }
 
-    section.container img{
+    section.container img:not(.img_except){
       margin: auto;
       width: 95% !important;
       height: auto !important;
@@ -1277,7 +1294,26 @@ hr {
         align-items:center;
         justify-content:center;
     }
+    .w20{
+      width: 100% !important;
+      text-align: center;
+      margin:0 auto;
+      display:flex;
+      align-items:center;
+      justify-content:center;
 
+      padding-bottom:20px;
+    }
+    .w10{
+      width: 100% !important;
+      text-align: center;
+      margin:0 auto;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+
+      padding-bottom:20px;
+    }
     .w75{
         width: 100% !important;
         text-align: center;
